# asktowebapi-server

./: .dockerignore  .gitignore  Dockerfile  api.py  checksize.sh  pyproject.toml  requirements.txt  requirements2.txt
static/: asktoweb.js  index.html  localization.json
