[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["morimori00 <mshintaro014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
langchain-openai = "0.1.8"
langchain-core = "0.2.5"
pydantic = "^2.7.4"
langchain-community = "0.2.4"
supabase = "2.5.0"
langchain-pinecone = "0.1.1"
0-0-1 = "^0.0.1"
langchain-cohere = "0.1.8"
langchain-anthropic = "0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
